Add Maven Central release flow and Java 17 runtime compatibility groundwork (#264)
* Add Maven Central release workflows and Java 11 compatibility

Agent-Logs-Url: https://github.com/lemon-ant/JHarmonizer/sessions/cb218806-aa3e-4712-a6a4-628c16f95987

Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>

* Update release setup and Java 11 compatibility work in progress

Agent-Logs-Url: https://github.com/lemon-ant/JHarmonizer/sessions/cb218806-aa3e-4712-a6a4-628c16f95987

Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>

* Retarget compatibility to latest Spoon supported Java

Agent-Logs-Url: https://github.com/lemon-ant/JHarmonizer/sessions/dd7736d5-1a9a-4636-8af4-a73707b80c51

Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>

* Restore Java 17 compatible source constructs

Agent-Logs-Url: https://github.com/lemon-ant/JHarmonizer/sessions/d63f0219-fd30-4c98-a8f6-b92e42fda495

Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>

* Restore required switch fallback behavior

Agent-Logs-Url: https://github.com/lemon-ant/JHarmonizer/sessions/0d50c55f-50ff-4f69-a388-843d691a3b17

Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>

* Document restored defensive switch fallbacks

Agent-Logs-Url: https://github.com/lemon-ant/JHarmonizer/sessions/0d50c55f-50ff-4f69-a388-843d691a3b17

Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>

* Fix PMD build failures by using switch expressions where needed

Agent-Logs-Url: https://github.com/lemon-ant/JHarmonizer/sessions/265b994c-eab9-40dd-9dfd-6d4ae497611e

Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>

* Gate publish on 02-compat success via artifact; fix GPG passphrase wiring

Agent-Logs-Url: https://github.com/lemon-ant/JHarmonizer/sessions/88542553-334e-4018-a79b-4d56dc94a900

Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <